test/integration/bad/lang/incomplete2.stan
transformed data {
  1.0 .^ foo[] while
}
